--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Paul Staab
 description: "Personal Homepage, Blog and Projects of Paul Staab."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "" #important: start with /
-url: "https://github.com/paulstaab/solid-jekyll"
+url: "https://paulstaab.github.io/solid-jekyll"
 
 # Build settings
 markdown: kramdown
