add instagram account

--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ social:
     url: https://twitter.com/paulstaab 
   - title: linkedin
     url: https://de.linkedin.com/in/paulstaab
-  #- title: tumblr
-  #  url: 
+  - title: instagram
+    url: https://instagram.com/paul.staab
     
 about: "I'm a Phd Student in Statistical Genetics in Munich, Germany."
 
