--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Site settings
 title: "PAUL STAAB"
-description: "Personal Homepage, Blog and Projects of Paul Staab."
+description: "The Personal Homepage of Paul Staab."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "/." #important: start with /
-url: "http://paulstaab.de"
+url: "https://paulstaab.de"
 
 # Build settings
 markdown: kramdown
