add new job at SHS VIVEON

--- a/_config.yml
+++ b/_config.yml
@@ -53,5 +53,5 @@ social:
   - title: instagram
     url: https://instagram.com/paul.staab
     
-about: "I'm a Phd Student in Statistical Genetics in Munich, Germany."
+about: "I'm a Data Scientist in Munich, Germany."
 
