--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ navigation:
     url: /
 #  - title: PROJECTS
 #    url: /projects/
-  - title: PHOTOS
-    url: /photos/
+#  - title: PHOTOS
+#    url: /photos/
   - title: SCIENCE
     url: /science/
 
