--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Personal Homepage of Paul Staab"
 analytics: UA-86675232-1
 baseurl: "/." #important: start with /
 url: "https://paulstaab.de"
-wallpaper: autumn1.jpg
+wallpaper: winter2.JPG
 
 navigation:
   - title: HOME
