--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ social:
     url: https://twitter.com/paulstaab 
   - title: linkedin
     url: https://de.linkedin.com/in/paulstaab
+  - title: xing
+    url: https://www.xing.com/profile/Paul_Staab2
   - title: facebook
     url: https://www.facebook.com/paul.r.staab
     
