--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ baseurl: "/." #important: start with /
 url: "https://paulstaab.de"
 wallpaper: winter2.JPG
 
+blog:
+ - title: "ML in Production"
+ - description: "ML in Production is my personal blog, where I write about Data Science and Machine Learning with a particular focus on the steps that are neccesary to use both realiably in applications and products. "
+ - url: "/blog"
+
 navigation:
   - title: HOME
     url: /
