--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ wallpaper: winter2.JPG
 
 blog:
   title: "ML in Production"
-  description: "ML in Production is my personal blog, where I write about Data Science and Machine Learning with a particular focus on the steps that are neccesary to use both realiably in applications and products. "
+  description: "ML in Production is my personal blog, where I write about Data Science and Machine Learning with a particular focus on the steps that are neccesary to use both reliably in applications and products."
   url: "https://paulstaab.de/blog/"
 
 navigation:
