Active Blog in Config

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ blog:
 navigation:
   - title: HOME
     url: /
-#  - title: BLOG
-#    url: /blog/    
+  - title: BLOG
+    url: /blog/    
   - title: PROJECTS
     url: /projects/
   - title: SCIENCE
