--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ collections:
 
 # Build settings
 markdown: kramdown
-permalink: /:year/:title
+permalink: /blog/:year/:title
 excerpt_separator: <!--more--> #use this in posts to define how long the excerpt of the post (that is shown on the Blog page) is
 
 colors:  #in hex code if not noted else
