[CI] Add html5 validation step

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,16 +1,32 @@
-name: Jekyll site CI
+name: CI/CD
 
 on: [push]
 
 jobs:
-  build:
-
+- build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
     - name: Build the site in the jekyll/builder container
+      uses: actions/checkout@v1
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
+
+- test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: HTML5 Validator
+      uses: Cyb3r-Jak3/html5validator-action@v0.4
+      with:
+        # Path of the files to test
+        root: ${{ github.workspace }}/_site
+        # Extra arguments to test with
+        # extra: # optional
+        # Format for logging output. Valid values: gnu,xml,json,text
+        # format: # optional
+        # Logging Level. Valid values: DEBUG, INFO, WARNING. Default: WARNING
+        # log_level: # optional, default is WARNING
+        # Checks css as well
+        # css: # optional
+
