--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,9 +31,29 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@v0.4
       with:
         root: .
+        CSS: true
 
     - name: Link Checker
       uses: peter-evans/link-checker@v1
       with:
         args: -v -r .
-  
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/download-artifact@v1
+      with:
+        name: homepage
+        path: site
+
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete --size-only
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-central-1'
+        SOURCE_DIR: 'site'
