--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,12 +1,10 @@
-name: Jekyll site CI
+name: CI/CD
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Build the site in the jekyll/builder container
@@ -14,3 +12,43 @@ jobs:
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
+        
+    - uses: actions/upload-artifact@v1
+      with:
+        name: homepage
+        path: _site
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+    - uses: actions/download-artifact@v1
+      with:
+        name: homepage
+        path: .
+    
+    - name: Check HTML
+      uses: chabad360/htmlproofer@master
+      with:
+        directory: .
+        arguments: --http-status-ignore "999" --check-html true
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/download-artifact@v1
+      with:
+        name: homepage
+        path: site
+
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete --size-only
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-central-1'
+        SOURCE_DIR: 'site'
