Minify css stylesheets

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ collections:
 markdown: kramdown
 permalink: /blog/:year/:title
 excerpt_separator: <!--more--> #use this in posts to define how long the excerpt of the post (that is shown on the Blog page) is
+sass:
+  style: compressed
 
 colors:  #in hex code if not noted else
   primary: "#00b3fe" #"#F70031" 
