--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,12 @@ colors:  #in hex code if not noted else
   
 ### CONTACT SETTINGS ###
 
-# Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
+# Social networks usernames. Shown in footer.
 social:
   - title: github
     url: https://github.com/paulstaab
+  - title: twitter
+    url: https://twitter.com/paulstaab
   - title: linkedin
     url: https://de.linkedin.com/in/paulstaab
     
