--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ navigation:
     url: /
   #- title: BLOG
   #  url: /blog/    
+  # - title: INVESTMENTS
+  #  url: /investments.html
   #- title: PROJECTS
   #  url: /projects.html
   #- title: SCIENCE
@@ -39,11 +41,11 @@ sass:
 colors:  #in hex code if not noted else
   primary: "#00b3fe" #"#F70031" 
   primary_rgb: "0,179,254" #"247,0,49" #rgb of the primary. Needed in some places for the transparency effect.  
-  secondary: "#384452" #"#33004D"
+  secondary: "#FFFFFF" # "#384452" #"#33004D"
+  text: "#000000"
+  text_menu: "#2a2f36"
   link: "#428bca"
   link_hover: "#01b2fe"
-  footer_heading: "#ffffff"
-  footer_content: "#bfc9d3"
   
   
 ### CONTACT SETTINGS ###
