--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ url: "https://paulstaab.de"
 wallpaper: spring1.jpg
 
 blog:
-  title: "ML in Production"
+  title: "Blog"
   description: ""
   url: "https://paulstaab.de/blog/index.html"
 
 navigation:
   - title: HOME
     url: /
+  #- title: BLOG
+  #  url: /blog/index.html
   # - title: INVESTMENTS
   #  url: /investments.html
-  - title: BLOG
-    url: /blog/index.html
   #- title: PROJECTS
   #  url: /projects.html
   #- title: SCIENCE
@@ -59,7 +59,7 @@ social:
   - title: linkedin
     url: https://de.linkedin.com/in/paulstaab
     
-about: "I'm a Data Scientist in Munich, Germany."
+about: "I'm a ML Engineer in Munich, Germany."
 plugins:
   - jekyll-sitemap
 
