--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ colors:  #in hex code if not noted else
 social:
   - title: github
     url: https://github.com/paulstaab
-#  - title: twitter
-#    url: https://twitter.com/paulstaab
+  - title: twitter
+    url: https://twitter.com/paulstaab
   - title: linkedin
     url: https://de.linkedin.com/in/paulstaab
     
