--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,7 +31,7 @@ jobs:
       uses: chabad360/htmlproofer@master
       with:
         directory: .
-        arguments: --http-status-ignore "999" --http-status-ignore "400" --check-html true
+        arguments: --http-status-ignore "400,999" --check-html true
 
   deploy:
     runs-on: ubuntu-latest
